<resources>
    <string name="app_name">Genti</string>
    <string name="to_string">%s</string>
    <string name="dummy">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="token_expire_error_msg">로그인 상태를 확인해주세요!</string>
    <string name="error_msg">오류가 발생했습니다. 잠시 후 다시 시도해주세요.</string>
    <string name="kakao_connection_error_msg">카카오톡 연동에 문제가 발생했습니다.</string>
    <string name="adapter_not_initialized_error_msg">Adapter is not initialized</string>
    <string name="manager_not_initialized_error_msg">Billing Manager is not initialized</string>
    <string name="view_type_error_msg">Unknown View Type : %d</string>
    <string name="default_notification_channel_id">default_messaging_channel</string>
    <string name="btn_next">다음으로</string>
    <string name="btn_done">사진 생성하기</string>
    <string name="btn_share">공유하기</string>
    <string name="btn_download">저장하기</string>
    <string name="menu_feed">피드</string>
    <string name="menu_create">생성</string>
    <string name="menu_profile">프로필</string>
    <string name="login_btn_kakao">카카오 로그인</string>
    <string name="login_tv_title">내 마음대로 세상에 하나뿐인\n나의 AI 사진을 찍어 보세요.</string>
    <string name="login_tv_subtitle">5초만에 가입해서 바로 시작할 수 있어요.</string>
    <string name="signup_tv_title">성별과 나이를 알려주세요.</string>
    <string name="signup_tv_subtitle">사진을 더 잘 표현하기 위해 활용됩니다.</string>
    <string name="signup_tv_gender_title">성별</string>
    <string name="signup_tv_gender_male">남성</string>
    <string name="signup_tv_gender_female">여성</string>
    <string name="signup_tv_birth_title">출생년도</string>
    <string name="signup_tv_birth_hint">YYYY</string>
    <string name="signup_tv_phone_title">전화번호</string>
    <string name="signup_tv_phone_hint">010XXXXXXXX</string>
    <string name="signup_btn_submit">완료</string>
    <string name="onboarding_btn_next">다음으로</string>
    <string name="onboarding_btn_finish">젠티하러 가기</string>
    <string name="onboarding_tv_title">젠티, 어떻게 사용하나요?</string>
    <string name="onboarding_tv_first_subtitle">원하는 사진을 자유롭게 설명해요.</string>
    <string name="onboarding_tv_first_body">의상, 배경 등 어떤 사진을 만들고 싶은지 입력해주세요.</string>
    <string name="create_select_tv_default_title">내 사진 만들기</string>
    <string name="create_select_tv_default_subtitle">찍고 싶은 내 사진을 AI로 마음껏 만들어 보세요!</string>
    <string name="create_select_tv_default_body">일상적인 사진부터 판타지한 장면까지 모두 가능해요.</string>
    <string name="create_select_tv_default_caption">내 사진 세 장만 있으면 만들 수 있어요.</string>
    <string name="create_select_tv_parent_title">부모님 사진 만들기</string>
    <string name="create_select_tv_parent_subtitle">사랑하는 부모님의 사진을 만들어 보세요!</string>
    <string name="create_select_tv_parent_body">부모님의 독사진, 부모님과 함께 찍은 사진을 만들 수 있어요.</string>
    <string name="create_select_tv_parent_caption">흑백 사진이거나 화질이 안좋은 사진도 괜찮아요.</string>
    <string name="create_tv_title">사진 만들기</string>
    <string name="create_phase_text">%1$d/3</string>
    <string name="create_tv_script_title_parent">부모님의 어떤 모습을 담고 싶나요?</string>
    <string name="create_tv_script_subtitle_2_parent">부모님과 함께 찍고 싶은 사진이나 보고 싶은 부모님의 모습을 설명해주세요.</string>
    <string name="create_tv_script_title">어떤 사진을 만들고 싶나요?</string>
    <string name="create_tv_script_subtitle_1">AI가 이해하지 못하는 장소나 의상은 생성이 어려울 수 있어요.</string>
    <string name="create_tv_script_subtitle_2">성적이거나 폭력적인 사진은 생성되지 않아요.</string>
    <string name="create_et_script_hint">만들고 싶은 사진을 설명해주세요.</string>
    <string name="create_tv_random_title">이런 사진은 어때요?</string>
    <string name="create_tv_example_1">프랑스 야경을 즐기는 모습을 그려주세요. 항공점퍼를 입고 테라스에 서 있는 모습이에요.</string>
    <string name="create_parent_tv_title">부모님 사진 만들기</string>
    <string name="number_tv_title">어떤 사진을 찍고 싶나요?</string>
    <string name="number_btn_one_title">1인 사진</string>
    <string name="number_btn_one_subtitle">부모님 단독</string>
    <string name="number_btn_two_title">2인 사진</string>
    <string name="number_btn_two_subtitle">부모님 / 부모님과 나</string>
    <string name="pose_tv_ratio_title">사진의 비율을 선택해주세요.</string>
    <string name="pose_btn_sero_title">세로 사진</string>
    <string name="pose_btn_sero_subtitle">3:2 비율</string>
    <string name="pose_btn_garo_title">가로 사진</string>
    <string name="pose_btn_garo_subtitle">2:3 비율</string>
    <string name="selfie_tv_title">사진 생성에 사용할\n얼굴 사진 3장을 선택해주세요.</string>
    <string name="selfie_tv_guide_1">정면을 포함하여 사진의 각도가 다양할수록 좋아요.</string>
    <string name="selfie_tv_guide_2">모자, 악세사리 등으로 얼굴이 가려진 사진은 안돼요.</string>
    <string name="selfie_tv_guide_3">얼굴 표정이 다양할수록 더 실감나는 사진을 만들 수 있어요.</string>
    <string name="selfie_tv_guide_parent">흑백 사진이거나, 화질이 좋지 않아도 괜찮아요.</string>
    <string name="selfie_tv_warning">타인의 사진을 도용하면 서비스 이용이 정지되고,\n법적인 처벌을 받을 수 있습니다.</string>
    <string name="selfie_tv_title_parent_one">사진 생성에 사용할 부모님 얼굴 사진\n3장을 선택해주세요</string>
    <string name="selfie_tv_title_parent_two">사진 생성에 사용할 두 분의 사진을\n각각 3장씩 선택해주세요</string>
    <string name="selfie_tv_input_title">이런 사진이 좋아요</string>
    <string name="selfie_tv_first_parent">첫번째 인물</string>
    <string name="selfie_tv_second_parent">두번째 인물</string>
    <string name="selfie_tv_btn_select">사진 선택하기</string>
    <string name="selfie_tv_btn_reselect">다시 선택하기</string>
    <string name="selfie_btn_create">사진 생성하기</string>
    <string name="selfie_toast_old_picker_limit">3장의 이미지를 선택해 주세요</string>
    <string name="selfie_toast_picker_error">갤러리 이미지를 가져오는 과정에서 오류가 발생했습니다.</string>
    <string name="create_guide_tv_title_up">이번에는</string>
    <string name="create_guide_tv_ratio">비율</string>
    <string name="create_guide_tv_angle">앵글</string>
    <string name="create_guide_tv_frame">프레임</string>
    <string name="create_guide_tv_title_down">을 선택해야 해요!</string>
    <string name="create_guide_tv_ex">예시</string>
    <string name="wait_btn_return">피드로 돌아가기</string>
    <string name="wait_tv_header">사진 생성 중</string>
    <string name="wait_tv_title">세상에 없던\n나만의 사진을 찍고 있어요!</string>
    <string name="wait_tv_title_paid">소중한 사람과의 추억이 담긴\n사진을 찍고 있어요!</string>
    <string name="wait_tv_subtitle">사진이 완성되면, 완료 알림을 보내드려요.</string>
    <string name="wait_tv_time_title">예상 소요 시간</string>
    <string name="wait_tv_time_subtitle">2시간 정도 걸릴 예정이에요.</string>
    <string name="wait_tv_time_guide">세상에 하나뿐인 사진을 만들어 드리기 위해\n배경부터 의상까지 꼼꼼하게 준비하고 있어요.</string>
    <string name="waiting_error_tv_title">사진 생성에 실패했습니다.</string>
    <string name="waiting_error_tv_subtitle">죄송합니다. 서버에 오류가 발생하였습니다.\n사진 생성을 다시 시도할까요? </string>
    <string name="waiting_error_btn_exit">닫기</string>
    <string name="waiting_error_btn_again">사진 다시 생성</string>
    <string name="main_dialog_tv_title">사진이 완성되었어요!</string>
    <string name="main_dialog_tv_subtitle">다른 사진을 만들기 전에\n완성된 사진을 보러갈까요?</string>
    <string name="main_dialog_btn_move_to_finish">사진 보기</string>
    <string name="finished_tv_title">하나뿐인 나만의 사진 완성!</string>
    <string name="finished_tv_saved">마이페이지에서 사진을 확인할 수 있습니다.</string>
    <string name="finished_btn_share">공유하기</string>
    <string name="finished_btn_unwanted">사진이 잘못 나왔나요?</string>
    <string name="finished_tv_title_paid">소중한 사진이 완성되었어요!</string>
    <string name="finished_btn_save">사진 저장하기</string>
    <string name="finished_error_input_tv_title">사진에 어떤 문제가 있나요?</string>
    <string name="finished_error_input_tv_subtitle">구체적으로 작성 해주실수록\n오류 확인이 빠르게 진행됩니다.</string>
    <string name="finished_error_input_tv_hint">오류 사항을 입력해주세요.</string>
    <string name="finished_error_input_btn_submit">제출</string>
    <string name="finished_error_input_btn_back">닫기</string>
    <string name="finished_error_output_tv_title">의견 감사합니다!</string>
    <string name="finished_error_output_tv_subtitle">작성해주신 내용을 잘 확인하여\n더 좋은 서비스를 제공하는 젠티가 되겠습니다.</string>
    <string name="finished_error_output_btn_okay">닫기</string>
    <string name="finished_rating_tv_title">사진은 어떠셨나요?</string>
    <string name="finished_rating_tv_subtitle">별점을 남겨주시면 앞으로 더 마음에 드는\n사진을 만들어 드릴 수 있어요!</string>
    <string name="finished_rating_tv_btn_skip">건너뛰기</string>
    <string name="feed_tv_title">젠플루언서들이 만든 사진들을 둘러보세요.</string>
    <string name="feed_btn_genfluencer"><u>젠플루언서란?</u></string>
    <string name="feed_tv_genfluencer_guide">여러분이 만든 사진은 자동으로 업로드되지 않습니다.</string>
    <string name="feed_tv_item_title">사진 설명</string>
    <string name="feed_info_tv_title">젠플루언서란?</string>
    <string name="feed_info_tv_subtitle">젠티로 자신만의 독창적인 사진을 만드는 사람들로,\n다른 사용자들이 자신만의 사진을 잘 만들 수 있도록\n영감을 주는 역할을 합니다.</string>
    <string name="feed_info_btn_more">어떤 혜택이 있나요?</string>
    <string name="profile_tv_title">마이페이지</string>
    <string name="profile_tv_waiting">세상에 없던 나만의 사진 찍는 중 ⋯</string>
    <string name="profile_tv_list_title">내가 만든 사진</string>
    <string name="profile_tv_empty">아직 내가 만든 사진이 없어요.</string>
    <string name="profile_tv_empty_guide">세상에 하나뿐인 나만의 사진을 만들어보세요!</string>
    <string name="profile_image_download_success">사진이 저장되었어요</string>
    <string name="setting_tv_title">설정</string>
    <string name="setting_btn_terms_of_service">이용 약관</string>
    <string name="setting_btn_privacy_policy">개인정보처리방침</string>
    <string name="setting_btn_android_version">앱 버전</string>
    <string name="setting_tv_android_version">v%s</string>
    <string name="setting_btn_company_info">사업자 정보</string>
    <string name="setting_btn_question">문의하기</string>
    <string name="setting_btn_logout">로그아웃</string>
    <string name="setting_btn_quit">회원 탈퇴</string>
    <string name="setting_logout_tv_title">정말 로그아웃 하시겠어요?</string>
    <string name="setting_logout_subtitle">사진 생성 중에 로그아웃 하시면\n오류가 발생할 수 있으니 주의해주세요.</string>
    <string name="setting_logout_btn_return">취소</string>
    <string name="setting_logout_btn_logout">로그아웃</string>
    <string name="setting_quit_tv_title">정말 탈퇴하시겠어요?</string>
    <string name="setting_quit_tv_subtitle">탈퇴 시, 생성한 사진 내역이 모두 사라집니다.\n그래도 탈퇴하시겠습니까?</string>
    <string name="setting_quit_btn_quit">탈퇴하기</string>
    <string name="push_tv_title">사진 완성 알림을 받아보세요!</string>
    <string name="push_tv_subtitle">알림에 동의해 주시면\n사진이 완성되었을 때 알려드릴게요.</string>
    <string name="push_btn_close">다음에</string>
    <string name="push_btn_get_alarm">알림 받기</string>
    <string name="openchat_tv_title_up">내가 만든 특별한 사진,</string>
    <string name="openchat_tv_title_down">다른 사람에게 보여주고 싶다면?</string>
    <string name="openchat_tv_subtitle">젠티 사진 공유방에서 사진을 자랑하고\n다른 사람의 사진도 구경해보세요!</string>
    <string name="openchat_tv_guide">지금 %1$d명 이상이 나만의 하나뿐인 사진을 자랑하고 있어요!</string>
    <string name="openchat_btn_enter">사진 공유방 참여하기</string>
    <string name="openchat_btn_access">이 페이지 다시 보지 않기</string>
    <string name="verify_before_tv_title">사진을 만들기 전에\n본인 인증을 진행해주세요.</string>
    <string name="verify_before_tv_subtitle">사진 도용 없는 젠티를 위해 본인 촬영을 진행합니다.\n본인 인증은 1회만 진행되니 얼굴을 명확하게 촬영해주세요.</string>
    <string name="verify_before_tv_baby">(자녀의 사진을 만드는 경우, 자녀의 얼굴을 촬영해주세요.)</string>
    <string name="verify_before_btn_photo">본인 인증하기</string>
    <string name="verify_before_tv_warning">타인의 얼굴을 도용하는 것은 명백한 범죄행위에 해당하며\n시도만으로도 법적인 제재를 받을 수 있습니다.</string>
    <string name="verify_after_tv_title">촬영이 완료되었습니다.</string>
    <string name="verify_after_tv_subtitle">AI가 얼굴을 인식하지 못하면 사진 생성이 제한될 수 있어요.\n얼굴이 가려지지 않도록 주의해주세요.</string>
    <string name="verify_after_tv_guide">해당 사진은 본인 인증에만 활용되며\n사진을 만들 때는 앨범에서 선택할 수 있어요!</string>
    <string name="verify_after_btn_retake">다시 촬영하기</string>
    <string name="verify_after_btn_verify">본인 인증 완료하기</string>
    <string name="verify_success_toast">본인 인증이 완료되었습니다</string>
    <string name="verify_exit_tv_title">정말 나가시겠어요?</string>
    <string name="verify_exit_tv_subtitle">메인 화면으로 나가면 \n촬영한 사진은 자동으로 삭제됩니다.</string>
    <string name="verify_exit_btn_exit">나가기</string>
</resources>