<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_guide_bg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:adjustViewBounds="true"
            android:src="@drawable/img_guide_bg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/btn_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:src="@drawable/ic_close_dialog"
            app:layout_constraintEnd_toEndOf="@id/iv_guide_bg"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_guide_title_up"
            style="@style/TextAppearance.Genti.BodyLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:text="@string/create_guide_tv_title_up"
            app:layout_constraintStart_toStartOf="@id/iv_guide_bg"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_guide_title_ratio"
            style="@style/TextAppearance.Genti.Headline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="25dp"
            android:background="@drawable/img_green_bg_2_word"
            android:gravity="center"
            android:text="@string/create_guide_tv_ratio"
            app:layout_constraintEnd_toStartOf="@id/tv_guide_title_angle"
            app:layout_constraintTop_toBottomOf="@id/tv_guide_title_up" />

        <TextView
            android:id="@+id/tv_guide_title_angle"
            style="@style/TextAppearance.Genti.Headline4"
            android:layout_marginEnd="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/img_green_bg_2_word"
            android:gravity="center"
            android:text="@string/create_guide_tv_angle"
            app:layout_constraintEnd_toEndOf="@id/iv_guide_bg"
            app:layout_constraintStart_toStartOf="@id/iv_guide_bg"
            app:layout_constraintTop_toBottomOf="@id/tv_guide_title_up" />

        <TextView
            android:id="@+id/tv_guide_title_frame"
            style="@style/TextAppearance.Genti.Headline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/img_green_bg_3_word"
            android:gravity="center"
            android:text="@string/create_guide_tv_frame"
            app:layout_constraintStart_toEndOf="@id/tv_guide_title_angle"
            app:layout_constraintTop_toBottomOf="@id/tv_guide_title_up" />

        <TextView
            android:id="@+id/tv_guide_title_down"
            style="@style/TextAppearance.Genti.BodyLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="20dp"
            android:text="@string/create_guide_tv_title_down"
            app:layout_constraintEnd_toEndOf="@id/iv_guide_bg"
            app:layout_constraintTop_toBottomOf="@id/tv_guide_title_angle" />

        <TextView
            android:id="@+id/tv_guide_ex"
            style="@style/TextAppearance.Genti.BodyNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/create_guide_tv_ex"
            android:textColor="@color/green_1"
            app:layout_constraintBottom_toTopOf="@id/iv_guide_ex"
            app:layout_constraintStart_toStartOf="@id/iv_guide_bg" />

        <ImageView
            android:id="@+id/iv_guide_ex"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:adjustViewBounds="true"
            android:src="@drawable/img_guide_ex"
            app:layout_constraintBottom_toBottomOf="@id/iv_guide_bg"
            app:layout_constraintEnd_toEndOf="@id/iv_guide_bg"
            app:layout_constraintStart_toStartOf="@id/iv_guide_bg" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>